infrastructure/vault/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault
spec:
  selector:
    app: vault
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8200
  type: ClusterIP
